changes  filename "plot" into "viewer"

--- a/lib/viewer/viewer.html
+++ b/lib/viewer/viewer.html
@@ -16,6 +16,6 @@
   </head>
   <body>
     <div id="graph" class="full-height"></div>
-    <script src="./plot.js"></script>
+    <script src="./viewer.js"></script>
   </body>
 </html>
